<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_adapter_tip"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/colorWarn"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:text="@string/bluetooth_adapter_disabled"/>

        <TextView
            android:id="@+id/tv_adapter_states"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:text="@string/enable"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="entryBredrInquiryActivity"
        android:text="@string/bredr_inquiry"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="entryBleCentralActivity"
        android:text="@string/ble_central"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="entryBlePeripheralActivity"
        android:text="@string/ble_peripheral"
        android:textAllCaps="false" />

</LinearLayout>